--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     </div>
                     <div class="text-center">
                         <p class="text-sm text-gray-600 mb-2">Promo berlaku hingga:</p>
-                        <p class="font-semibold text-purple-900">31 Desember 2023</p>
+                        <p class="font-semibold text-purple-900">31 AGUSTUS 2025</p>
                     </div>
                 </div>
             </div>
